--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
   "description": "my youtube",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/attckoneren/mytube-reloaded"
+    "url": "git+https://github.com/attckoneren/mytube-reloaded.git"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node index.js"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "author": "Seung Jun",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.1",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.3",
     "nodemon": "^3.0.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/attckoneren/mytube-reloaded/issues"
+  },
+  "homepage": "https://github.com/attckoneren/mytube-reloaded#readme"
 }
