--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "author": "Seung Jun",
   "license": "MIT",
   "dependencies": {
+    "@ffmpeg/core": "^0.12.4",
+    "@ffmpeg/ffmpeg": "^0.12.7",
+    "@ffmpeg/util": "^0.12.1",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
