--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Seung Jun",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.485.0",
     "@ffmpeg/core": "^0.12.4",
     "@ffmpeg/ffmpeg": "^0.12.7",
     "@ffmpeg/util": "^0.12.1",
@@ -29,6 +30,7 @@
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
